XPCOM Glue Is broken on linux. b=168584, sr=alecf@netscape.com, r=bryner@netscape.com